# alpha-caeli

./: .gitignore  CMakeLists.txt  README.md
include/alpha-caeli/: api.h  compiler.h  gettime.h  localtime.h  mutex.h  utctime.h
include/alpha-caeli/freertos/: mutex.h
include/alpha-caeli/mswin/: gettime.h  localtime.h  mutex.h  utctime.h
include/alpha-caeli/posix/: gettime.h  localtime.h  mutex.h  utctime.h
include/alpha-caeli/stdc/: gettime.h  localtime.h  utctime.h
source/: CMakeLists.txt  features.h.in
source/freertos/: mutex.c
source/mswin/: gettime.c  mutex.c
source/posix/: gettime.c
